# Bitsweeper_SDL2

./: CMakeLists.txt  README.md  main.c  main.h
dat/: strings.txt
data/: strings.txt
include/: common.h  defs.h  engine.h  game.h  interface.h  util.h
src/: bitwise.c  bitwise.h  common.h  engine.c  engine.h  game.c  game.h  interface.c  interface.h  main.c  main.h  util.c  util.h
src/global/: common.h  defs.h
